idk how to make this shit come out the left bruh

--- a/styles/style.css
+++ b/styles/style.css
@@ -87,9 +87,8 @@ body {
 .Drawer {
     position: fixed;
     top: 0;
-    right: -100%;
-    width: 100%;
-    max-width: 500px;
+    right: -33.33vw;
+    width: 33.33vw;
     height: 100%;
     border: none;
     padding: 0;
