--- a/styles/style.css
+++ b/styles/style.css
@@ -1,4 +1,4 @@
-*{
+* {
     margin: 0;
     padding: 0;
     font-family: 'Courier New', Courier, monospace;
@@ -203,7 +203,7 @@ body {
     transform: translateX(5px);
 }
 
-/* Responsive Design */
+/* Responsivnesssss */
 @media (max-width: 768px) {
     .line {
         margin: 50px auto;
