--- a/styles/style.css
+++ b/styles/style.css
@@ -288,3 +288,150 @@ body {
         padding: 1.5rem;
     }
 }
+
+
+/* the main page styling */
+
+.sec_1{
+    display: flex;
+    flex-direction: column ;
+    justify-content: center;
+    align-items: center;
+    margin: 40px 15% ;
+}
+
+.sec_1 p {
+    font-size: 1.2rem;
+    font-weight: 500;
+    text-align: center;
+    color: #fff;
+}
+
+.type_effect{
+    display: flex;
+    justify-content: center;
+    margin-bottom: 30px;
+}
+
+.type_effect h1 {
+    color: #d66f6f;
+    margin-inline:auto ;   
+    overflow: hidden;
+    /*si on l'ajouter pas les mots vont suater les lignes les l'effet de typing ne sera pas variment clire*/
+    white-space: nowrap;
+    /*sert a simuler l'affichage du cureur*/
+    border-right: #d66f6f 1px solid ; 
+    animation: typing 4s steps(29) forwards /*infinite*/ ,
+    blink 1s step-end infinite;
+}
+
+@keyframes typing {
+    from {
+        width : 0%;
+    }
+
+    to {
+        width: 100%;
+    }
+}
+
+@keyframes blink {
+    50%{
+        border-color: transparent;
+    }
+}
+
+.sec_2 h4{
+    text-align: center;
+    font-size: 1.6rem;
+    margin-top: 50px;
+    margin-bottom: 30px;
+    color: #d66f6f;
+}
+
+.phases_container{
+    /*   display: flex;
+        flex-direction: column;
+        justify-content: center;
+    */
+    margin:50px 10% ;
+    background-color: #1b1b1b;
+    padding: 20px;
+    border-radius: 12px;
+    border-left: 4px solid #d66f6f;
+    transition: 0.3s;
+}
+.phase_content{
+    padding-bottom: 20px;
+}
+.phase_content:not(:last-child){
+    margin-bottom: 30px;
+    border-bottom: 1px solid #2a2a2a;
+}
+
+
+.phase_content .titre{
+    display: flex;
+    gap: 30px;
+
+}
+
+.titre h5{
+    font-size: 1.3rem;
+    font-weight: 100;
+    color: #fff;
+}
+
+.toggle_text
+{
+    background-color: transparent;
+    border: none;
+    color: #fff;
+    cursor: pointer;
+    transition: transform 0.3s ease;
+    
+}
+.toggle_text.animate{
+    transform: rotate(90deg);
+}
+
+
+.phase_content .text {
+    margin-top: 15px;
+    padding-left: 40px ;
+    font-size: 0.95rem;
+    color: #e0e0e0;
+    display: none;
+}
+
+
+/* Animation d'apparition */
+.phase_content  .text.show {
+    display: block;
+    animation: showing 0.4s ease;
+}
+
+@keyframes showing {
+    from {
+        opacity: 0; 
+        transform: translateY(-5px);
+    }
+
+    to {
+        opacity: 1; 
+        transform: translateY(0);
+    }
+}
+
+.container-footer {
+    max-width: 1200px;
+    margin: 50px auto;
+    text-align: center;
+    color: #888;
+    font-size: 14px;
+}
+
+
+.text a{
+    color: #fff;
+}
